--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.datasource.url=jdbc:h2:file:~/db/hexagonal.h2
+spring.datasource.url=jdbc:h2:mem:hexagonal
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.flyway.locations=classpath:db/migration/h2
 
